tests/rosetta/out/Clojure/15-puzzle-solver.error
run: exit status 1
Syntax error compiling at (/tmp/15-puzzle-solver.clj:18:12).
Unable to resolve symbol: testpkg in this context

Full report at:
/tmp/clojure-7151284692100235341.edn
