tests/rosetta/out/Clojure/15-puzzle-solver.clj
; Generated by Mochi compiler v0.10.30 on 1970-01-01T00:00:00Z
(ns main
  (:require
    [mochi.runtime.ffi.go.testpkg :as testpkg]
  ))

(defn _print [& args]
  (letfn [(pv [v]
            (cond
              (true? v) (print 1)
              (false? v) (print 0)
              (sequential? v) (doseq [[i x] (map-indexed vector v)]
                                (when (> i 0) (print " "))
                                (pv x))
              :else (print v)))]
    (doseq [[i a] (map-indexed vector args)]
      (when (> i 0) (print " "))
      (pv a))
    (println)))
(defn -main []
  (_print ((:FifteenPuzzleExample testpkg) ))
)

(-main)
